fix: use same width for normal border and focused border of text inputs (no content flicker)

--- a/client/src/app/index.scss
+++ b/client/src/app/index.scss
@@ -53,7 +53,7 @@ h3 {
 }
 
 input {
-  border: 2px solid constants.$secondary-color;
+  border: 1px solid constants.$secondary-color;
   border-radius: 5px;
   padding: 8px 10px;
   padding-left: 15px;
